# MAG-Mathematical-Modeling

./: .gitignore  README.md
lab1/: Makefile  config.txt  out.csv  res.csv
lab1/doc/: edumms_lab_2020_rk6_11m_abidokovrs_lab1.docx  ~$Отчет.docx  ~WRL0005.tmp  ~WRL1255.tmp  Отчет.docx
lab1/headers/: config.hpp
lab1/src/: config.cpp  euler.cpp  graphic.py  heun.cpp  main.cpp  step_calc.py  step_calc2.py  test_out.csv
lab2/: CMakeLists.txt  Makefile  Makefile2  config.txt  out.csv
lab2/doc/: edumms_lab_2020_rk6_11m_abidokovrs_lab2.docx  ~$umms_lab_2020_rk6_11m_abidokovrs_lab2.docx
lab2/doc/img/: Shablon_A3_gorizontalny.bak  Shablon_A3_gorizontalny.dwg
lab2/src/: base_plugin.hpp  config_plugin.hpp  euler_plugin.cpp  heun_plugin.cpp  main — копия (2).cpp  main — копия.cpp  main.cpp  plug_test.cpp  solver_plugin.hpp  to_console_plugin.cpp  to_csv_plugin.cpp  to_ftp_plugin.cpp  txt_config_plugin.cpp  widget_plugin.hpp
lab2/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
